// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Radio /> should render radio with label 1`] = `
<View
  accessibilityLabelledBy="radio-group-3-label"
  accessibilityRole="radiogroup"
  display="flex"
  flexDirection="column"
  style={
    Array [
      Object {
        "display": "flex",
        "flexDirection": "column",
      },
    ]
  }
>
  <View
    marginBottom="spacing.2"
    marginRight="spacing.5"
    style={
      Array [
        Object {
          "marginBottom": 4,
          "marginRight": 16,
        },
      ]
    }
  >
    <View
      alignItems="center"
      display="flex"
      flexDirection="row"
      flexWrap="wrap"
      gap="spacing.0"
      style={
        Array [
          Object {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "row",
            "flexWrap": "wrap",
            "gap": 0,
          },
        ]
      }
    >
      <Text
        color="surface.text.subdued.lowContrast"
        fontFamily="text"
        fontSize={75}
        fontStyle="normal"
        fontWeight="bold"
        lineHeight="s"
        style={
          Array [
            Object {
              "color": "hsla(217, 18%, 45%, 1)",
              "fontFamily": "Lato",
              "fontSize": 12,
              "fontStyle": "normal",
              "fontWeight": "700",
              "lineHeight": 16,
              "marginBottom": 0,
              "marginLeft": 0,
              "marginRight": 0,
              "marginTop": 0,
              "paddingBottom": 0,
              "paddingLeft": 0,
              "paddingRight": 0,
              "paddingTop": 0,
              "textDecorationLine": "none",
            },
            Object {},
          ]
        }
      >
        Radio group
      </Text>
      <View
        style={
          Array [
            Object {
              "borderColor": "black",
              "borderStyle": "solid",
              "borderWidth": 0,
              "clip": "rect(0 0 0 0)",
              "clipPath": "inset(50%)",
              "height": 1,
              "marginBottom": -1,
              "marginLeft": 0,
              "marginRight": -1,
              "marginTop": 0,
              "overflow": "hidden",
              "paddingBottom": 0,
              "paddingLeft": 0,
              "paddingRight": 0,
              "paddingTop": 0,
              "position": "absolute",
              "whiteSpace": "nowrap",
              "width": 1,
              "wordWrap": "normal",
            },
          ]
        }
      >
        <Text
          color="surface.text.normal.lowContrast"
          fontFamily="text"
          fontSize={100}
          fontStyle="normal"
          fontWeight="regular"
          lineHeight="l"
          style={
            Array [
              Object {
                "color": "hsla(217, 56%, 17%, 1)",
                "fontFamily": "Lato",
                "fontSize": 15,
                "fontStyle": "normal",
                "fontWeight": "400",
                "lineHeight": 24,
                "marginBottom": 0,
                "marginLeft": 0,
                "marginRight": 0,
                "marginTop": 0,
                "paddingBottom": 0,
                "paddingLeft": 0,
                "paddingRight": 0,
                "paddingTop": 0,
                "textDecorationLine": "none",
              },
              Object {},
            ]
          }
        >
          
        </Text>
      </View>
    </View>
  </View>
  <View
    style={
      Array [
        Object {},
      ]
    }
  >
    <View
      display="flex"
      flexDirection="column"
      style={
        Array [
          Object {
            "display": "flex",
            "flexDirection": "column",
          },
        ]
      }
    >
      <View
        marginBottom={0}
        style={
          Array [
            Object {
              "marginBottom": 0,
            },
          ]
        }
      >
        <View
          accessibilityDescribedBy="radio-1-helptext-2"
          accessibilityInvalid={false}
          accessibilityRequired={false}
          accessibilityRole="radio"
          accessibilityState={
            Object {
              "checked": false,
              "disabled": false,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          name="radio-group-3"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Array [
              Object {
                "display": "flex",
                "flexDirection": "row",
                "marginBottom": 2,
                "marginTop": 2,
              },
            ]
          }
          value="a"
        >
          <View
            display="flex"
            flexDirection="column"
            style={
              Array [
                Object {
                  "display": "flex",
                  "flexDirection": "column",
                },
              ]
            }
          >
            <View
              alignItems="center"
              display="flex"
              flexDirection="row"
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "display": "flex",
                    "flexDirection": "row",
                  },
                ]
              }
            >
              <View
                isChecked={false}
                isDisabled={false}
                isNegative={false}
                size="medium"
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "transparent",
                      "borderColor": "hsla(214, 18%, 69%, 1)",
                      "borderRadius": 9999,
                      "borderStyle": "solid",
                      "borderWidth": 1.5,
                      "display": "flex",
                      "height": 16,
                      "justifyContent": "center",
                      "marginBottom": 2,
                      "marginLeft": 2,
                      "marginRight": 2,
                      "marginTop": 2,
                      "width": 16,
                    },
                  ]
                }
              />
              <View
                marginLeft="spacing.2"
                style={
                  Array [
                    Object {
                      "marginLeft": 4,
                    },
                  ]
                }
              />
              <Text
                color="surface.text.subtle.lowContrast"
                fontFamily="text"
                fontSize={100}
                fontWeight="regular"
                lineHeight="l"
                style={
                  Array [
                    Object {
                      "color": "hsla(216, 27%, 36%, 1)",
                      "fontFamily": "Lato",
                      "fontSize": 15,
                      "fontStyle": "normal",
                      "fontWeight": "400",
                      "lineHeight": 24,
                      "marginBottom": 0,
                      "marginLeft": 0,
                      "marginRight": 0,
                      "marginTop": 0,
                      "paddingBottom": 0,
                      "paddingLeft": 0,
                      "paddingRight": 0,
                      "paddingTop": 0,
                      "textDecorationLine": "none",
                    },
                  ]
                }
              >
                Remember password
              </Text>
            </View>
            <View
              marginLeft="spacing.7"
              style={
                Array [
                  Object {
                    "marginLeft": 24,
                  },
                ]
              }
            />
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`<Radio /> should set disabled state with isDisabled 1`] = `
<View
  accessibilityLabelledBy="radio-group-10-label"
  accessibilityRole="radiogroup"
  display="flex"
  flexDirection="column"
  style={
    Array [
      Object {
        "display": "flex",
        "flexDirection": "column",
      },
    ]
  }
>
  <View
    marginBottom="spacing.2"
    marginRight="spacing.5"
    style={
      Array [
        Object {
          "marginBottom": 4,
          "marginRight": 16,
        },
      ]
    }
  >
    <View
      alignItems="center"
      display="flex"
      flexDirection="row"
      flexWrap="wrap"
      gap="spacing.0"
      style={
        Array [
          Object {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "row",
            "flexWrap": "wrap",
            "gap": 0,
          },
        ]
      }
    >
      <Text
        color="surface.text.subdued.lowContrast"
        fontFamily="text"
        fontSize={75}
        fontStyle="normal"
        fontWeight="bold"
        lineHeight="s"
        style={
          Array [
            Object {
              "color": "hsla(217, 18%, 45%, 1)",
              "fontFamily": "Lato",
              "fontSize": 12,
              "fontStyle": "normal",
              "fontWeight": "700",
              "lineHeight": 16,
              "marginBottom": 0,
              "marginLeft": 0,
              "marginRight": 0,
              "marginTop": 0,
              "paddingBottom": 0,
              "paddingLeft": 0,
              "paddingRight": 0,
              "paddingTop": 0,
              "textDecorationLine": "none",
            },
            Object {},
          ]
        }
      >
        Radio group
      </Text>
      <View
        style={
          Array [
            Object {
              "borderColor": "black",
              "borderStyle": "solid",
              "borderWidth": 0,
              "clip": "rect(0 0 0 0)",
              "clipPath": "inset(50%)",
              "height": 1,
              "marginBottom": -1,
              "marginLeft": 0,
              "marginRight": -1,
              "marginTop": 0,
              "overflow": "hidden",
              "paddingBottom": 0,
              "paddingLeft": 0,
              "paddingRight": 0,
              "paddingTop": 0,
              "position": "absolute",
              "whiteSpace": "nowrap",
              "width": 1,
              "wordWrap": "normal",
            },
          ]
        }
      >
        <Text
          color="surface.text.normal.lowContrast"
          fontFamily="text"
          fontSize={100}
          fontStyle="normal"
          fontWeight="regular"
          lineHeight="l"
          style={
            Array [
              Object {
                "color": "hsla(217, 56%, 17%, 1)",
                "fontFamily": "Lato",
                "fontSize": 15,
                "fontStyle": "normal",
                "fontWeight": "400",
                "lineHeight": 24,
                "marginBottom": 0,
                "marginLeft": 0,
                "marginRight": 0,
                "marginTop": 0,
                "paddingBottom": 0,
                "paddingLeft": 0,
                "paddingRight": 0,
                "paddingTop": 0,
                "textDecorationLine": "none",
              },
              Object {},
            ]
          }
        >
          
        </Text>
      </View>
    </View>
  </View>
  <View
    style={
      Array [
        Object {},
      ]
    }
  >
    <View
      display="flex"
      flexDirection="column"
      style={
        Array [
          Object {
            "display": "flex",
            "flexDirection": "column",
          },
        ]
      }
    >
      <View
        marginBottom={0}
        style={
          Array [
            Object {
              "marginBottom": 0,
            },
          ]
        }
      >
        <View
          accessibilityDescribedBy="radio-11-helptext-12"
          accessibilityInvalid={false}
          accessibilityRequired={false}
          accessibilityRole="radio"
          accessibilityState={
            Object {
              "checked": false,
              "disabled": true,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          name="radio-group-10"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Array [
              Object {
                "display": "flex",
                "flexDirection": "row",
                "marginBottom": 2,
                "marginTop": 2,
              },
            ]
          }
          value="a"
        >
          <View
            display="flex"
            flexDirection="column"
            style={
              Array [
                Object {
                  "display": "flex",
                  "flexDirection": "column",
                },
              ]
            }
          >
            <View
              alignItems="center"
              display="flex"
              flexDirection="row"
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "display": "flex",
                    "flexDirection": "row",
                  },
                ]
              }
            >
              <View
                isChecked={false}
                isDisabled={true}
                isNegative={false}
                size="medium"
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "transparent",
                      "borderColor": "hsla(216, 44%, 23%, 0.18)",
                      "borderRadius": 9999,
                      "borderStyle": "solid",
                      "borderWidth": 1.5,
                      "display": "flex",
                      "height": 16,
                      "justifyContent": "center",
                      "marginBottom": 2,
                      "marginLeft": 2,
                      "marginRight": 2,
                      "marginTop": 2,
                      "width": 16,
                    },
                  ]
                }
              />
              <View
                marginLeft="spacing.2"
                style={
                  Array [
                    Object {
                      "marginLeft": 4,
                    },
                  ]
                }
              />
              <Text
                color="surface.text.placeholder.lowContrast"
                fontFamily="text"
                fontSize={100}
                fontWeight="regular"
                lineHeight="l"
                style={
                  Array [
                    Object {
                      "color": "hsla(214, 18%, 69%, 1)",
                      "fontFamily": "Lato",
                      "fontSize": 15,
                      "fontStyle": "normal",
                      "fontWeight": "400",
                      "lineHeight": 24,
                      "marginBottom": 0,
                      "marginLeft": 0,
                      "marginRight": 0,
                      "marginTop": 0,
                      "paddingBottom": 0,
                      "paddingLeft": 0,
                      "paddingRight": 0,
                      "paddingTop": 0,
                      "textDecorationLine": "none",
                    },
                  ]
                }
              >
                Remember password
              </Text>
            </View>
            <View
              marginLeft="spacing.7"
              style={
                Array [
                  Object {
                    "marginLeft": 24,
                  },
                ]
              }
            />
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;
